--- a/guitar-studier/src/app/nav-bar/nav-bar.component.html
+++ b/guitar-studier/src/app/nav-bar/nav-bar.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/jazz">Jazz</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/triads">Triads</a>
+          </li>
         <!--
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
