--- a/guitar-studier/src/app/home/home.component.html
+++ b/guitar-studier/src/app/home/home.component.html
@@ -14,20 +14,20 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Jazz Chords</h2>
-          <p>If you want to play jazz guitar, you need to know jazz guitar chords. Try these intemediate guitar drills</p>
-          <p><a class="btn btn-secondary" routerLink="/jazz" role="button">Jazz Chords &raquo;</a></p>
+          <h2>Triads</h2>
+          <p>Knowing the chord tones of Triads helps you break out of the pentatonic box, making your solos sound alive!</p>
+          <p><a class="btn btn-secondary" routerLink="/triads" role="button">Triads &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" routerLink="/jazz" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
+            <h2>Jazz Chords</h2>
+            <p>If you want to play jazz guitar, you need to know jazz guitar chords. Try these intemediate guitar drills</p>
+            <p><a class="btn btn-secondary" routerLink="/jazz" role="button">Jazz Chords &raquo;</a></p>
+          </div>
+          <!--        <div class="col-md-4">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
+        </div>-->
       </div>
 
       <hr>
