added jazz and triad flashcards

--- a/guitar-studier/src/app/jazz/jazz.component.html
+++ b/guitar-studier/src/app/jazz/jazz.component.html
@@ -1,9 +1,7 @@
-<main role="main">
-
-    <div class="starter-template">
-        <h1>Jazz Chords</h1>
-        <p class="lead">Jazz Chord stuff here
-        </p>
-      </div>
-
-  </main>
+<h1>
+    <div id="output">{{jazzChord}}</div>
+</h1>
+<h2>
+    <div id="counter">{{count}}</div>
+</h2>
+<button id="random" style="width:200px;height:200px" (click)="JazzChords()">Press me for Triads chords</button>
