--- a/guitar-studier/src/app/app.component.html
+++ b/guitar-studier/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
+<footer class="container">
+        <div class="navbar fixed-bottom">&copy; Ben Lutz 2019</div>
+    </footer>
