--- a/guitar-studier/src/app/jazz/jazz.component.html
+++ b/guitar-studier/src/app/jazz/jazz.component.html
@@ -1,7 +1,16 @@
-<h1>
-    <div id="output">{{jazzChord}}</div>
-</h1>
-<h2>
-    <div id="counter">{{count}}</div>
-</h2>
-<button id="random" style="width:200px;height:200px" (click)="JazzChords()">Press me for Triads chords</button>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>
+                <div class="text-center" id="output">{{jazzChord}}</div>
+            </h1>
+            <h2>
+                <div id="counter" class="text-center">{{count}}</div>
+            </h2>
+            <div class="text-center">
+                <button id="random" style="width:200px;height:200px" (click)="JazzChords()">Press me for Jazz chords</button>
+            </div> 
+
+        </div>
+    </div>
+</div>
