--- a/guitar-studier/src/app/home/home.component.html
+++ b/guitar-studier/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         <h1 class="display-3">{{title}}</h1>
         <div>{{jumbotronText1}}</div>
         <div>{{jumbotronText2}}</div>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Try some guitar exercises &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" routerLink="/triads" role="button">Try some guitar exercises &raquo;</a></p>
       </div>
     </div>
 
