--- a/guitar-studier/src/app/home/home.component.html
+++ b/guitar-studier/src/app/home/home.component.html
@@ -23,11 +23,11 @@
             <p>If you want to play jazz guitar, you need to know jazz guitar chords. Try these intemediate guitar drills</p>
             <p><a class="btn btn-secondary" routerLink="/jazz" role="button">Jazz Chords &raquo;</a></p>
           </div>
-          <!--        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>-->
+          <div class="col-md-4">
+            <h2>Sight reading</h2>
+            <p>Knowing your fretboard is important for intermediate guitar. Practice finding these notes!</p>
+            <p><a class="btn btn-secondary" routerLink="/sight-reading" role="button">Sight reading &raquo;</a></p>
+          </div>
       </div>
 
       <hr>
