--- a/guitar-studier/src/app/note-flashcard/note-flashcard.component.html
+++ b/guitar-studier/src/app/note-flashcard/note-flashcard.component.html
@@ -1,3 +1,14 @@
-<p>
-  note-flashcard works!
-</p>
+<div class="container">
+  <div class="row">
+      <div class="col-md-12">
+        <div id="boo"></div>
+          <h2>
+              <div id="counter" class="text-center">{{count}}</div>
+          </h2>
+          <div class="text-center">
+              <button id="random" style="width:200px;height:200px" (click)="SightReading()">Press me for Jazz chords</button>
+          </div> 
+
+      </div>
+  </div>
+</div>
