working random notes

--- a/guitar-studier/src/app/note-flashcard/note-flashcard.component.html
+++ b/guitar-studier/src/app/note-flashcard/note-flashcard.component.html
@@ -6,7 +6,7 @@
               <div id="counter" class="text-center">{{count}}</div>
           </h2>
           <div class="text-center">
-              <button id="random" style="width:200px;height:200px" (click)="SightReading()">Press me for Jazz chords</button>
+              <button id="random" style="width:200px;height:200px" (click)="SightReading()">Press me for notes</button>
           </div> 
 
       </div>
