--- a/guitar-studier/src/app/note-flashcard/note-flashcard.component.html
+++ b/guitar-studier/src/app/note-flashcard/note-flashcard.component.html
@@ -3,7 +3,7 @@
       <div class="col-md-12">
         <div id="boo"></div>
           <h2>
-              <div id="counter" class="text-center">{{count}}</div>
+              <div id="counter" class="text-center"></div>
           </h2>
           <div class="text-center">
               <button id="random" style="width:200px;height:200px" (click)="SightReading()">Press me for notes</button>
