--- a/guitar-studier/src/app/nav-bar/nav-bar.component.html
+++ b/guitar-studier/src/app/nav-bar/nav-bar.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/triads">Triads</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/sight-reading">Sight Reading</a>
+          </li>
         <!--
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
