adding spaces and organizing note selectors

--- a/guitar-studier/src/app/note-flashcard/note-flashcard.component.scss
+++ b/guitar-studier/src/app/note-flashcard/note-flashcard.component.scss
@@ -315,3 +315,7 @@ music-staff[clef="treble"] music-note[pitch="G9"] {
     background-position-y: 0.5rem;
     padding-bottom: 13rem;
 }
+
+.right-spaced {
+    padding-right: 10px;
+}
