--- a/guitar-studier/src/app/note-flashcard/note-flashcard.component.html
+++ b/guitar-studier/src/app/note-flashcard/note-flashcard.component.html
@@ -1,19 +1,3 @@
-<div *ngFor="let note of allNotes">
-    <label>
-        <div>
-          <input type="checkbox" checked value='{{note}}' data-md-icheck (change)="toggleNote($event)" />
-          <span>{{note}}</span>
-        </div>
-      </label>
-    </div>
-  <div *ngFor="let octave of allOctaves">
-      <label>
-          <div>
-            <input type="checkbox" checked value='{{octave}}' data-md-icheck (change)="toggleOctave($event)" />
-            <span>{{octave}}</span>
-          </div>
-        </label>
-      </div>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -24,62 +8,26 @@
       <div class="text-center">
         <button id="random" style="width:200px;height:200px" (click)="SightReading()">Press me for notes</button>
       </div>
-      
-      <div>
-        <!--
+      <div> Notes: 
+        <span *ngFor="let note of allNotes">
+          <label>
+            <span class="right-spaced"> 
+              <span >{{note}}</span>
+              <input type="checkbox" checked value='{{note}}' data-md-icheck (change)="toggleNote($event)" />
+            </span>
+          </label>
+        </span>
+      </div>
+      <div> Octaves: 
+        <span *ngFor="let octave of allOctaves">
+          <label>
+            <span class="right-spaced">
+              <span>{{octave}}</span>
+              <input type="checkbox" checked value='{{octave}}' data-md-icheck (change)="toggleOctave($event)" />
+            </span>
+          </label>
+        </span>
+      </div>
 
-        <label>
-          <div>
-            <input type="checkbox" checked value="a" data-md-icheck (change)="toggleNote($event)" />
-            <span>A</span>
-          </div>
-        </label>
-        <label>
-          <input type="checkbox" checked value="b" data-md-icheck (change)="toggleNote($event)" />
-          <span>B</span>
-        </label>
-        <label>
-          <input type="checkbox" checked value="c" data-md-icheck (change)="toggleNote($event)" />
-          <span>C</span>
-        </label>
-        <label> <input type="checkbox" checked value="d" data-md-icheck (change)="toggleNote($event)" />
-          <span>D</span>
-        </label>
-        <label>
-        <input type="checkbox" checked value="e" data-md-icheck (change)="toggleNote($event)" />
-        <span>E</span>
-        </label>
-        <label>
-        <input type="checkbox"  checked value="f" data-md-icheck (change)="toggleNote($event)" />
-        <span>F</span>
-        </label>
-        <label>
-          <input type="checkbox" checked value="g" data-md-icheck (change)="toggleNote($event)" />
-          <span>G</span>
-        </label>
-      </div>
-    -->
-      <!--
-      <div>        <label>
-          <div>
-            <input type="checkbox" value="'3'" data-md-icheck (change)="toggleOctave($event)" />
-            <span>3</span>
-          </div>
-        </label>
-        <label>
-            <div>
-              <input type="checkbox" checked value="'4'" data-md-icheck (change)="toggleOctave($event)" />
-              <span>4</span>
-            </div>
-        </label>
-        <label>
-            <div>
-              <input type="checkbox" checked value="'5'" data-md-icheck (change)="toggleOctave($event)" />
-              <span>5</span>
-            </div>
-        </label>
-      </div>
-    -->
     </div>
   </div>
-</div>
