adding layout for triad page content

--- a/guitar-studier/src/app/triads/triads.component.html
+++ b/guitar-studier/src/app/triads/triads.component.html
@@ -1,15 +1,24 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <h1>
-                <div class="text-center" id="output">{{triad}}</div>
-            </h1>
-            <h2>
-                <div id="counter" class="text-center">{{count}}</div>
-            </h2>
-            <div class="text-center">
+        <div class="col-md-8">
+            <p class="lead flashcard"><span class="" id="output">{{triad}}</span></p>
+            
+                <div id="counter" class="">Flashcards seen: {{count}}</div>
+            
+            <div class="">
                 <button id="random" style="width:200px;height:200px" (click)="Triads()">Press me for Triads</button>
             </div> 
+
+        </div>
+        <div class="col-md-4">
+            <h1>
+                <div>How To Learn Guitar Triads:</div>
+            </h1>
+            
+                <div>
+                    Learing Guitar Triads
+                </div>
+
 
         </div>
     </div>
