--- a/guitar-studier/src/app/jazz/jazz.component.html
+++ b/guitar-studier/src/app/jazz/jazz.component.html
@@ -2,12 +2,12 @@
     <div class="row">
         <div class="col-md-12">
             <h1>
-                <div class="text-center" id="output">{{jazzChord}}</div>
+                <div class="" id="output">{{jazzChord}}</div>
             </h1>
             <h2>
-                <div id="counter" class="text-center">{{count}}</div>
+                <div id="counter" class="">Flashcards seen: {{count}}</div>
             </h2>
-            <div class="text-center">
+            <div class="">
                 <button id="random" style="width:200px;height:200px" (click)="JazzChords()">Press me for Jazz
                     chords</button>
             </div>
