adding layout and styles for content

--- a/guitar-studier/src/app/triads/triads.component.html
+++ b/guitar-studier/src/app/triads/triads.component.html
@@ -11,8 +11,8 @@
 
         </div>
         <div class="col-md-4">
-            <h1>
-                <div>How To Learn Guitar Triads:</div>
+            <h1 class="content-lead"> 
+                How To Learn Guitar Triads:
             </h1>
             
                 <div>
