--- a/guitar-studier/src/app/triads/triads.component.html
+++ b/guitar-studier/src/app/triads/triads.component.html
@@ -100,7 +100,7 @@
             <p>
                 Triads are important as they allow you to find chord tones really quickly. This helps you learn the
                 fretboard and be able to find notes on the fretboard when soloing over chords. This means you can now
-                break out of the pentatonic box when soloing, simply focus on playing the notes in the triad over the
+                break out of the pentatonic box when soloing: simply focus on playing the notes in the triad over the
                 related chord in your progression.
             </p>
             <p class="lead">
