--- a/src/app/jazz/jazz.component.html
+++ b/src/app/jazz/jazz.component.html
@@ -53,6 +53,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
+            <div>
             <p class="lead flashcard"><span class="" id="output">{{jazzChord}}</span></p>
 
             <div id="counter" class="">Flashcards seen: {{count}}</div>
@@ -99,7 +100,34 @@
                     </label>
                 </span>
             </div>
-
+            </div>
+            <div>
+                    <h2>
+                        How to use jazz chords:
+                    </h2>
+                    <p>
+                        Jazz Chords are amazing, becuase they allow you to instantly play along with many jazz greats. You can
+                        start to play along to jazz backing tracks like
+                        <a href="https://www.youtube.com/watch?v=Xjf2kiDO19Y" target="_blank">Autumn Leaves</a>. Not only are
+                        you playing Jazz, but you're also learning the fretboard.
+                        Knowing where the chords are allows you to use the chord tones when you're soloing over a progression.
+                    </p>
+                    <p class="lead">
+                        Practice Tips:
+                    </p>
+                    <p>
+                        Like a lot of intermediate guitar pratice tips, there isn't a lot of magic in this, just practice. Find
+                        songs you love and learn to apply these chords!
+                    </p>
+                    <p>
+                        Pick out a popular jazz song, pull up a backing track on Youtube, and go over all the chords you'll
+                        need. After some practice, you're ready to play along
+                        with the backing track. Don't be afraid to <em>slow down the backing track</em> until you're able to do
+                        it full speed. A lot of the fingerings are hard, but
+                        with consistant pracice, you'll be playing along in no time, and willhave learned your fretboard!
+                    </p>
+        
+                </div>
         </div>
         <div class="col-md-4">
             <h1 class="content-lead">
@@ -140,12 +168,12 @@
                     <div class="collapse" id="minor">
                         <div class="card card-body">
                             <span class="tab">
-                                <div>e|--------------|</div>
-                                <div>B|--------------|</div>
-                                <div>G|--------------|</div>
-                                <div>D|--------------|</div>
-                                <div>A|--------------|</div>
-                                <div>E|--------------|</div>
+                                    <div>e|-1r--1----------|</div>
+                                    <div>B|-1---2----------|</div>
+                                    <div>G|-1---3r---------|</div>
+                                    <div>D|-3---3----------|</div>
+                                    <div>A|-3---1r---------|</div>
+                                    <div>E|-1r--X----------|</div>
                             </span>
                         </div>
                     </div>
@@ -160,12 +188,12 @@
                     <div class="collapse" id="maj7">
                         <div class="card card-body">
                             <span class="tab">
-                                <div>e|--------------|</div>
-                                <div>B|--------------|</div>
-                                <div>G|--------------|</div>
-                                <div>D|--------------|</div>
-                                <div>A|--------------|</div>
-                                <div>E|--------------|</div>
+                                    <div>e|-X---X----------|</div>
+                                    <div>B|-1---3----------|</div>
+                                    <div>G|-2---2----------|</div>
+                                    <div>D|-2---3----------|</div>
+                                    <div>A|-X---1r---------|</div>
+                                    <div>E|-1r--X----------|</div>
                             </span>
                         </div>
                     </div>
@@ -180,12 +208,12 @@
                     <div class="collapse" id="min7">
                         <div class="card card-body">
                             <span class="tab">
-                                <div>e|--------------|</div>
-                                <div>B|--------------|</div>
-                                <div>G|--------------|</div>
-                                <div>D|--------------|</div>
-                                <div>A|--------------|</div>
-                                <div>E|--------------|</div>
+                                    <div>e|-X---1----------|</div>
+                                    <div>B|-1---2----------|</div>
+                                    <div>G|-1---1----------|</div>
+                                    <div>D|-1---3----------|</div>
+                                    <div>A|-X---1r---------|</div>
+                                    <div>E|-1r--X----------|</div>
                             </span>
                         </div>
                     </div>
@@ -200,12 +228,12 @@
                     <div class="collapse" id="dom7">
                         <div class="card card-body">
                             <span class="tab">
-                                <div>e|--------------|</div>
-                                <div>B|--------------|</div>
-                                <div>G|--------------|</div>
-                                <div>D|--------------|</div>
-                                <div>A|--------------|</div>
-                                <div>E|--------------|</div>
+                                    <div>e|-X---X----------|</div>
+                                    <div>B|-1---3----------|</div>
+                                    <div>G|-2---1----------|</div>
+                                    <div>D|-1---3----------|</div>
+                                    <div>A|-X---1----------|</div>
+                                    <div>E|-1---X----------|</div>
                             </span>
                         </div>
                     </div>
@@ -220,12 +248,12 @@
                     <div class="collapse" id="halfDom7">
                         <div class="card card-body">
                             <span class="tab">
-                                <div>e|--------------|</div>
-                                <div>B|--------------|</div>
-                                <div>G|--------------|</div>
-                                <div>D|--------------|</div>
-                                <div>A|--------------|</div>
-                                <div>E|--------------|</div>
+                                    <div>e|-X---X----------|</div>
+                                    <div>B|-0---2----------|</div>
+                                    <div>G|-1---1----------|</div>
+                                    <div>D|-1---2----------|</div>
+                                    <div>A|-X---1r---------|</div>
+                                    <div>E|-1r--X----------|</div>
                             </span>
                         </div>
                     </div>
@@ -240,46 +268,17 @@
                     <div class="collapse" id="min6">
                         <div class="card card-body">
                             <span class="tab">
-                                <div>e|--------------|</div>
-                                <div>B|--------------|</div>
-                                <div>G|--------------|</div>
-                                <div>D|--------------|</div>
-                                <div>A|--------------|</div>
-                                <div>E|--------------|</div>
+                                    <div>e|-1r--2----------|</div>
+                                    <div>B|-1---0----------|</div>
+                                    <div>G|-1---1----------|</div>
+                                    <div>D|-0---0----------|</div>
+                                    <div>A|-X---2r---------|</div>
+                                    <div>E|-1r--X----------|</div>
                             </span>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <h2>
-                How to use jazz chords:
-            </h2>
-            <p>
-                Jazz Chords are amazing, becuase they allow you to instantly play along with many jazz greats. You can
-                start to play along to jazz backing tracks like
-                <a href="https://www.youtube.com/watch?v=Xjf2kiDO19Y" target="_blank">Autumn Leaves</a>. Not only are
-                you playing Jazz, but you're also learning the fretboard.
-                Knowing where the chords are allows you to use the chord tones when you're soloing over a progression.
-            </p>
-            <p class="lead">
-                Practice Tips:
-            </p>
-            <p>
-                Like a lot of intermediate guitar pratice tips, there isn't a lot of magic in this, just practice. Find
-                songs you love and learn to apply these chords!
-            </p>
-            <p>
-                Pick out a popular jazz song, pull up a backing track on Youtube, and go over all the chords you'll
-                need. After some practice, you're ready to play along
-                with the backing track. Don't be afraid to <em>slow down the backing track</em> until you're able to do
-                it full speed. A lot of the fingerings are hard, but
-                with consistant pracice, you'll be playing along in no time, and willhave learned your fretboard!
-            </p>
-
         </div>
     </div>
 </div>
