--- a/src/app/note-flashcard/note-flashcard.component.scss
+++ b/src/app/note-flashcard/note-flashcard.component.scss
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -318,4 +318,16 @@ music-staff[clef="treble"] music-note[pitch="G9"] {
 
 .right-spaced {
     padding-right: 10px;
+}
+
+.flashcard {
+    font-size: 2.5rem;
+    margin-bottom: .5rem;
+    font-weight: 500;
+    line-height: 1.2;
+    color: inherit;
+}
+
+.content-lead {
+    font-size: 2rem;
 }
