--- a/src/app/note-flashcard/note-flashcard.component.html
+++ b/src/app/note-flashcard/note-flashcard.component.html
@@ -1,38 +1,4 @@
-<!--<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div id="boo"></div>
-      <h2>
-        <div id="counter" class="text-center"></div>
-      </h2>
-      <div class="text-center">
-        <button id="random" style="width:200px;height:200px" (click)="SightReading()">Press me for notes</button>
-      </div>
-      <div> Notes: 
-        <span *ngFor="let note of allNotes">
-          <label>
-            <span class="right-spaced"> 
-              <span >{{note}}</span>
-              <input type="checkbox" checked value='{{note}}' data-md-icheck (change)="toggleNote($event)" />
-            </span>
-          </label>
-        </span>
-      </div>
-      <div> Octaves: 
-        <span *ngFor="let octave of allOctaves">
-          <label>
-            <span class="right-spaced">
-              <span>{{octave}}</span>
-              <input type="checkbox" checked value='{{octave}}' data-md-icheck (change)="toggleOctave($event)" />
-            </span>
-          </label>
-        </span>
-      </div>
-
-    </div>
-  </div>
--->
-  <div class="container">
+<div class="container">
     <div class="row">
         <div class="col-md-8">
           <div id="boo"></div>
@@ -71,46 +37,33 @@
         </div>
         <div class="col-md-4">
             <h1 class="content-lead">
-                Guitar Triad Cheat Sheet:
+                Reading Sheet Music:
             </h1>
 
             <div>
-                Guitar Triads:
+                Spaces in Treble Clef (bottom up):
                 <ul>
-                    <li>Major:
-                        <ul>
-                            <li>1,3,5</li>
-                        </ul>
+                    <li>F, A, C, E 
                     </li>
-                    <li>Minor: <ul>
-                            <li>1,min3,5</li>
-                        </ul>
+                    
+                </ul>
+                Lines in Treble Clef (bottom up):
+                <ul>
+                    <li>E, G, B, D, F 
                     </li>
-                    <li>Major 7 (△):
-                        <ul>
-                            <li>3,5,7</li>
-                        </ul>
+                    
+                </ul>
+                Spaces in Bass Clef (bottom up):
+                <ul>
+                    <li>A, C, E, G
                     </li>
-                    <li>Minor 7:
-                        <ul>
-                            <li>min3,5,min7</li>
-                        </ul>
+                    
+                </ul>
+                Lines in Bass Clef (bottom up):
+                <ul>
+                    <li>G, B, D, F, A 
                     </li>
-                    <li>Dominant 7:
-                        <ul>
-                            <li>3,5,min7 </li>
-                        </ul>
-                    </li>
-                    <li>Minor 7/b5 (⦰):
-                        <ul>
-                            <li> min3, dim5, min7</li>
-                        </ul>
-                    </li>
-                    <li>Minor 6:
-                        <ul>
-                            <li>min3,5,6</li>
-                        </ul>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -118,31 +71,27 @@
     <div class="row">
         <div class="col-md-12">
             <h2>
-                How to use guitar triads:
+                How to drill sight reading:
             </h2>
             <p>
-                Triads are important as they allow you to find chord tones really quickly. This helps you learn the
-                fretboard and be able to find notes on the fretboard when soloing over chords. This means you can now
-                break out of the pentatonic box when soloing: simply focus on playing the notes in the triad over the
-                related chord in your progression.
+                Guitar sight reading is an important skill to practice. It has two important purposes, first one is to learn the fretboard. Learning
+                the fretboard allows you to find chord tones when soloing. The second is to be able to read sheet music. Being able to read sheet music will
+                help you learn how to play lead music that may not be written specifically for guitar. You can learn vocal, saxaphone, or any other melodic music!
             </p>
             <p class="lead">
                 Practice Tips:
             </p>
             <p>
-                Like a lot of intermediate guitar pratice tips, there isn't a lot of magic in this, just practice. Being
-                a great guitarist
-                requires knowing the fretboard at the same level you understand what word to use when you're speaking,
-                or
-                what key to hit on the keyboard when typing, or what button to hit on a controller when playing a game.
+                At first, just practice finding each note. As you become more comfortable, take note of the notes you miss and take the time to practice them specifically.
+                For an added challange, try to set a metronome and play each note on the beat. Gradually speed this up until you're a sight reading pro!
             </p>
             <p>
-                Set yourself a goal in exercises or time. Something like 50 triads or 30 minutes a day. Set yourself a
+                Set yourself a goal in exercises or time. Something like 50 four note sections or 30 minutes a day. Set yourself a
                 schedule,
                 get some free time and practice without distractions. You'll start slow at first, but slowly, with
                 practice, will
                 increase the speed you're able to play these. Getting fast will take practice, but that's all it takes!
-                Practice consistency
+                Practice consistently
                 and you'll see consistent results.
             </p>
 
