--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,6 +2,7 @@
 	background-image: url('/assets/images/guitarfretboard.jpg');
 	background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center; 
     max-width:100%;
     max-height:100%;
     color: #fff;
